Sec13_Chap174-initial-project and Maven Dependencies: Pierrot optimizations

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ local.properties
 # Intellij
 ######################
 .idea/
+target
 *.iml
 *.iws
 *.ipr
@@ -139,4 +140,3 @@ Desktop.ini
 ######################
 .eslintcache
 /.idea/
-
